initializing CI via GitHub Actions

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,6 +12,10 @@ knitr::opts_chunk$set(
 
 # reliabilitydiag
 
+<!-- badges: start -->
+[![R build status](https://github.com/aijordan/reliabilitydiag/workflows/R-CMD-check/badge.svg)](https://github.com/aijordan/reliabilitydiag/actions)
+<!-- badges: end -->
+
 ## Reliability Diagrams Using Isotonic Regression
 
 Checking the reliability of predictions via the CORP approach,
