--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(
 # reliabilitydiag
 
 <!-- badges: start -->
+[![CRAN status](https://www.r-pkg.org/badges/version/reliabilitydiag)](https://cran.r-project.org/package=reliabilitydiag)
 [![R build status](https://github.com/aijordan/reliabilitydiag/workflows/R-CMD-check/badge.svg)](https://github.com/aijordan/reliabilitydiag/actions)
 <!-- badges: end -->
 
