--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 Checking the reliability of predictions via the CORP approach,
 which generates provably statistically **C**onsistent, **O**ptimally binned,
 and **R**eproducible reliability diagrams using the **P**ool-adjacent-violators
-algorithm. See Dimitriadis, Gneiting, Jordan (2020), available at [arXiv:2008.03033](https://arxiv.org/abs/2008.03033).
+algorithm. See Dimitriadis, Gneiting, Jordan (2020), available at [doi:10.1073/pnas.2016191118](https://doi.org/10.1073/pnas.2016191118).
 
 CORP is based on non-parametric isotonic regression and implemented via the Pool-adjacent-violators (PAV) algorithm - essentially, the CORP reliability diagram shows the graph of the PAV- (re)calibrated forecast probabilities. The CORP approach allows for uncertainty quantification via either resampling techniques or asymptotic theory, furnishes a new numerical measure of miscalibration, and provides a CORP based Brier score decomposition that generalizes to any proper scoring rule.
 
